# CiCdTemplate

./: Cargo.toml  Makefile  README.md  Readme.md  script.sh
.github/workflows/: Alpha.yml  AppropriateBranch.yml  AppropriateBranchBeta.yml  AppropriateBranchMaster.yml  AutoMergeToBeta.yml  AutoPr.yml  AutoPrToAlpha.yml  AutoPrToBeta.yml  AutoPrToMaster.yml  Delete.yml  Exp.yml  Forward.yml  ForwardToAlpha.yml  ForwardToBeta.yml  ForwardToMaster.yml  ModuleModule1Push.yml  ModuleModule2Push.yml  ModuleModule3Push.yml  RunsClean.yml  RustFast.yml  RustFast2.yml  RustFull.yml  RustPullRequest.yml  StandardRust.yml  StandardRustPullRequest.yml  StandardRustPush.yml  StatusChecksRulesUpdate.yml  ToolsRustPullRequest.yml  WrongBranch.yml  WrongBranchAlpha.yml  WrongBranchMaster.yml
module/module1/: Cargo.toml  Readme.md
module/module1/rust/impl/module1/: module1_lib.rs
module/module1/src/: lib.rs
module/module2/: Cargo.toml  Readme.md
module/module2/rust/test/module2/: module2_tests.rs
module/module2/src/: lib.rs
