[package]
name = "module2"
version = "0.1.0"
edition = "2021"
authors = [
  "Kostiantyn Wandalen <wandalen@obox.systems>",
]
license = "MIT"
readme = "Readme.md"
documentation = "https://docs.rs/module2"
repository = "https://github.com/Wandalen/CiCdTemplate/tree/master/module/module2"
homepage = "https://github.com/Wandalen/CiCdTemplate/tree/master/module/module2"
description = """
___
"""
categories = [ "template" ]
keywords = [ "template" ]

[package.metadata.docs.rs]
all-features = true

include = [
  "/rust/impl/module2/module2_lib.rs",
  "/Cargo.toml",
  "/Readme.md",
  "/License",
]

# = features

[features]
default = [
  "use_std",
]
full = [
  "use_std",
  "use_alloc",
]
use_std = []
use_alloc = []

[lib]
name = "module2"
path = "rust/impl/module2/module2_lib.rs"

[[test]]
name = "module2_test"
path = "rust/test/module2/module2_tests.rs"

# [[example]]
# name = "module2_trivial_sample"
# path = "sample/rust/module2_trivial_sample/src/main.rs"

[dependencies]

[dev-dependencies]
